[package]
name = "ensure-cov"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"
description = "A simple Rust crate designed to help ensure test coverage in your projects by providing functions to track and assert code coverage during test execution."
authors = ["Zixuan Chen <remch183@gmail.com>"]
repository = "https://github.com/zxch3n/ensure-cov"
documentation = "https://docs.rs/ensure-cov"
readme = "README.md"
keywords = ["coverage", "testing", "ci"]
categories = ["development-tools::testing"]

[dependencies]

[features]
disable = []


